--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,27 +1,8 @@
-# filepath: c:\Users\LENOVO\Documents\cosas trabajo\SweetJyE\Pagina\front-gomas-enchiladas\.htaccess
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteBase /
-  
-  # Don't rewrite files or directories
-  RewriteCond %{REQUEST_FILENAME} -f [OR]
-  RewriteCond %{REQUEST_FILENAME} -d
-  RewriteRule ^ - [L]
-  
-  # Rewrite everything else to index.html to allow HTML5 state links
-  RewriteRule ^ index.html [L]
-</IfModule>
-
-# Prevent viewing of .htaccess file
-<Files .htaccess>
-  order allow,deny
-  deny from all
-</Files>
-
-# Prevent directory listings
-Options -Indexes
-
-# Serve index.html for any request that doesn't match an existing file
-<IfModule mod_negotiation.c>
-  Options -MultiViews
+  RewriteRule ^index\.html$ - [L]
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteRule . /index.html [L]
 </IfModule>
